--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>نظام تسجيل الغياب - مدرسة الشمامسة</h1>
+                <h1> نظام تسجيل الغياب - مدرسة بي نيشتي ايبسكوبس </h1>
                 <div class="school-logo">
                     <div class="logo-frame">
                       <img src="WhatsApp Image 2025-09-25 at 13.04.33_37954a2f.jpg" alt="School Logo">
@@ -1105,5 +1105,6 @@ window.addEventListener("DOMContentLoaded", () => {
 </body>
 
 </html>
+
 
 
